# lithicdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  robots.txt  sitemap.xml
src/: lib.rs  main.rs
src/api/: routes.rs
src/engine/: collection.rs  db.rs  mod.rs
src/index/: graph.rs  mod.rs  quantizer.rs
src/models/: api.rs  mod.rs  types.rs
src/storage/: files.rs
tests/: engine_tests.rs
