[package]
name = "lithicdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "lithicdb"
path = "src/lib.rs"

[[bin]]
name = "lithicdb"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

